--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,7 +70,6 @@ jobs:
       contents: read
       pages: write
       id-token: write
-
     # available images: https://github.com/actions/runner-images#available-images
     runs-on: ubuntu-latest
     steps:
@@ -78,6 +77,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: 'recursive'
+          fetch-depth: 0
       - name: Setup Ruby 💎
         uses: ruby/setup-ruby@v1
         with:
